# utesca-backend

./: .gitignore  Procfile  README.md  base64.html  base64_routes.py  main.py  mypy.ini  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: README.md  ci.yml  deploy-production.yml  ping-supabase.yml
database/: README.md  schema.sql
database/migrations/: add_email_templates_to_events.sql  add_notification_preferences.sql  drop_announcement_email_preference.sql
documentation/: event-registration-rsvp-workflow.md  rsvp-enhancements-spec.md
scripts/: run_ci_locally.sh
src/: __init__.py  main.py
src/api/v1/: events_store.json  events_store.py  router.py
src/core/: __init__.py  config.py  database.py  security.py
src/core/email/: __init__.py  models.py  service.py  templates.py
src/domains/: __init__.py
src/domains/auth/: __init__.py  api.py  dependencies.py  models.py  repository.py  service.py
src/domains/departments/: __init__.py  api.py  models.py  repository.py  service.py
src/domains/events/: __init__.py  api.py  models.py  repository.py  schemas.py  service.py
src/domains/events/analytics/: __init__.py  models.py  repository.py  service.py
src/domains/events/attendance/: __init__.py  api.py  models.py  repository.py  service.py
src/domains/events/data/: events_store.json  events_store.json.backup
src/domains/events/registrations/: __init__.py  api.py  files_repository.py  models.py  portal_api.py  public_api.py  repository.py  service.py
src/domains/projects/: __init__.py  api.py
src/domains/users/: __init__.py  api.py  models.py  repository.py  service.py
src/utils/: __init__.py  database.py  google_drive_models.py  google_drive_service.py  rate_limit.py  timezone.py
tests/: test_main.py  test_rate_limit.py  test_registration_service_rsvp.py  test_registration_validation.py  test_rsvp_service.py
