[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utesca-backend"
version = "0.1.0"
description = "UTESCA Portal Backend API"
requires-python = ">=3.13"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
pretty = true
follow_imports = "normal"

# Package structure settings
namespace_packages = true
explicit_package_bases = true

# Suppress false positive import errors for our own typed modules
disable_error_code = ["import-untyped", "import-not-found"]

# Exclude virtual environments and cache directories
exclude = [
    '\.venv',
    'venv',
    '\.git',
    '__pycache__',
    '\.mypy_cache',
    '\.pytest_cache',
    '\.ruff_cache',
    'build',
    'dist',
]


[tool.ruff]
# Ruff configuration (if needed)
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "B008", # Do not perform function calls in argument defaults - FastAPI requires this pattern
]

[tool.ruff.lint.per-file-ignores]
"src/core/email/templates.py" = ["E501"] # HTML email templates have long lines

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
filterwarnings = [
    # Ignore deprecation warnings from third-party packages
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince212",
]
